src/test/resources/parse/reject/compoundAssignmentExpressionAsId.ul
int id1 ()
{
    0 [0] = 0;
}
